Add GET /printers and POST /print
