# src/server/mod.rs
@@ -17,6 +17,8 @@ pub fn create_api_description() -> Result<ApiDescription<Arc<Context>>> {
     fn register_endpoints(api: &mut ApiDescription<Arc<Context>>) -> Result<(), String> {
         api.register(crate::server::endpoints::ping).unwrap();
         api.register(crate::server::endpoints::api_get_schema).unwrap();
+        api.register(crate::server::endpoints::print_file).unwrap();
+        api.register(crate::server::endpoints::get_printers).unwrap();
 
         // YOUR ENDPOINTS HERE!
 
